bookinfo/productpage.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  name: productpage
  namespace: bookinfo
spec:
  host: productpage
  subsets:
    - labels:
        version: v1
      name: v1
